# poetry-spike

./: .gitignore  Dockerfile  README.md  batect.yml  lefthook.yml  pyproject.toml
.github/workflows/: ci.yaml
scripts/: sanitise-notebooks.sh  start-jupyter.sh
scripts/go/: go-mac.sh
scripts/tests/: run-unit-tests.sh
tests/: test_demo.py
