[tool.poetry]
name = "poetry-local-spike"
version = "0.1.0"
description = ""
authors = ["David Tan <davidtan@thoughtworks.com>"]
# packages = [{include = "train", from = "src"}]

[tool.poetry.dependencies]
pandas = "1.5.1"
thinc = "^8.1"
spacy = "^3.3" # 3.4.3
python = "^3.9"
openpyxl = "^3.0.10"
nltk = "^3.7"
presidio-analyzer = "^2.2.30"
presidio-anonymizer = "^2.2.30"
matplotlib = "^3.6.2"
torch = "1.12.1"
bertopic = "^0.12.0"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"