[tool.poetry]
name = "poetry-local-spike"
version = "0.1.0"
description = ""
authors = ["David Tan <davidtan@thoughtworks.com>"]
# packages = [{include = "train", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.12.1"
bertopic = "0.12.0"

[tool.poetry.dev-dependencies]
# jupyter = "1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"